tdf#93883 don't add space to empty paragraph when bullet is turned off.

Change-Id: Ia1bad61cb5585dae0501e8cd657fc84bfea60ab2
Reviewed-on: https://gerrit.libreoffice.org/25679
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>